--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "f = open('output.json')\n",
+    "with f = open('output.json') as f:\n",
     "data = json.load(f)"
    ]
   },
