Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with f = open('output.json') as f:\n",
-    "data = json.load(f)"
+    "with open('output.json') as f:\n",
+    "    data = json.load(f)"
    ]
   },
   {
