Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    ],
    "source": [
     "for key in data['albums'].keys():\n",
-    "    print(key, type(data['albums'][key]))"
+    "    print('key=key, type(data['albums'][key]))"
    ]
   },
   {
