Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,26 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "href <class 'str'>\n",
-      "items <class 'list'>\n",
-      "limit <class 'int'>\n",
-      "next <class 'str'>\n",
-      "offset <class 'int'>\n",
-      "previous <class 'NoneType'>\n",
-      "total <class 'int'>\n"
+      "key= href contains  <class 'str'>\n",
+      "key= items contains  <class 'list'>\n",
+      "key= limit contains  <class 'int'>\n",
+      "key= next contains  <class 'str'>\n",
+      "key= offset contains  <class 'int'>\n",
+      "key= previous contains  <class 'NoneType'>\n",
+      "key= total contains  <class 'int'>\n"
      ]
     }
    ],
    "source": [
     "for key in data['albums'].keys():\n",
-    "    print('key=',key, 'type(data['albums'][key]))"
+    "    print('key=',key, 'contains ', type(data['albums'][key]))"
    ]
   },
   {
